# pomodoro-tracker

./: .gitignore  Makefile  README.md  alembic.ini  dependecy.py  docker-compose.test.yml  docker-compose.yml  dockerfile  exception.py  fabfile.py  fixtures.py  gunicorn.conf.py  main.py  pyproject.toml  pytest.ini  settings.py
alembic/: env.py
alembic/versions/: 04ffa7ece6f4_user_profile_access_token.py  12fbfa793c8c_user_init.py  3e740c7f52bb_alter_user_profiles_all_fields_is_.py  5b06ec6b02e2_user_init.py  62e329644331_user_init.py  74a2b48c2c7d_user_init.py  7f86f1b7f706_init.py  8667d612dd33_user_init.py  9b5bb0d95da8_user_profiles_delete_access_token.py  9dfa8517c866_userprofile_yandex_access_token.py  9eab151340d8_async_alembic.py  b3a5cd1b73c7_user_init.py  b690f37ece1c_user_init.py  bbe1bd82f0f7_user_init.py  ca13fc205578_extend_user_model.py  ddc7e6d18b3a_user_init.py  f5d5ec4f1a4e_task_add_user_id.py  fdaccba3f8eb_user_init.py
app/: constants.py  consumer.py  dependecy.py  exception.py  main.py  settings.py  utils.py
app/broker/: __init__.py  consumer.py  producer.py
app/clients/: google.py  oauth.py  yandex.py
cache/: __init__.py  accessor.py
clients/: __init__.py  google.py  oauth.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: auth.py  ping.py  tasks.py  users.py
models/: __init__.py  tasks.py  users.py
repository/: __init__.py  cache_task.py  task.py  users.py
schema/: __init__.py  tasks.py  users.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
worker/: celery.py
(+71 files in other folders)
